Fix settings section whitespace

--- a/settings/css/settings.scss
+++ b/settings/css/settings.scss
@@ -787,8 +787,11 @@ span.version {
 		display: block;
 		margin: 8px 0;
 	}
-	padding: 10px 30px;
 	margin-bottom: 0;
+}
+
+.personal-settings-setting-box .section {
+	padding: 10px 30px;
 }
 
 .followupsection {
